<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BTC -> BRL"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#696969"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/converter_vlBitcoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_compra"
        android:layout_marginBottom="15sp"
        android:background="@drawable/edittext_arredondado"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/converter_vlReais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_investimento"
        android:layout_marginBottom="15sp"
        android:background="@drawable/edittext_arredondado"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/converter_botao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/converter"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_arredondado"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:padding="10sp"/>

    <TextView
        android:id="@+id/converter_txtVocePossui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#696969"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/converter_vlConvertido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="5dp"
        android:textColor="#2eb627"/>

    <TextView
        android:id="@+id/converter_txtBitcoins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#696969"
        android:padding="5dp"/>

</LinearLayout>
